# Ciclismo

./: CMakeLists.txt  part.py  partition.csv  sdkconfig  sdkconfig.old
html_libs/: ap.html  pure.css  root.html  sta.html
main/: CMakeLists.txt  Kconfig.projbuild  ciclismo.c
main/analog_f/: l_analog.c  l_analog.h
main/https_f/: l_https.c  l_https.h
main/mem_f/: l_mem.c  l_mem.h
main/mpu_f/: l_mpu.c  l_mpu.h
main/socket_f/: l_socket.c  l_socket.h
main/wifi_f/: l_wifi.c  l_wifi.h
